--- a/9_using-webpack-w-typescript/package.json
+++ b/9_using-webpack-w-typescript/package.json
@@ -5,16 +5,17 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server",
+    "start": "webpack serve",
     "build": "webpack"
   },
   "keywords": [
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Konstantin Krumin",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.0",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
