--- a/10_3rd-party-libraries-and-typescript/package.json
+++ b/10_3rd-party-libraries-and-typescript/package.json
@@ -15,7 +15,11 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "@types/lodash": "^4.14.178",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
