--- a/10_3rd-party-libraries-and-typescript/package.json
+++ b/10_3rd-party-libraries-and-typescript/package.json
@@ -11,7 +11,7 @@
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Konstantin Krumin",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
