--- a/11_select-and-share-place/package.json
+++ b/11_select-and-share-place/package.json
@@ -11,7 +11,7 @@
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Konstantin Krumin",
   "license": "ISC",
   "devDependencies": {
     "@types/googlemaps": "^3.43.3",
