--- a/9_using-webpack-w-typescript/package.json
+++ b/9_using-webpack-w-typescript/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack --config webpack.config.prod.js"
   },
   "keywords": [
     "typescript",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@webpack-cli/serve": "^1.6.0",
+    "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
